trunk/Archive2/1f/aff8f605dbe6fb/output
main.cpp:7:19: error: expected ')'
    bool operator(int v) const
                  ^
main.cpp:7:18: note: to match this '('
    bool operator(int v) const
                 ^
main.cpp:7:10: error: 'operator()' cannot be the name of a variable or data member
    bool operator(int v) const
         ^
main.cpp:7:25: error: expected ';' at end of declaration list
    bool operator(int v) const
                        ^
                        ;
3 errors generated.
